{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 50,
  "lineage": "4156d4fe-d990-d06f-e6ed-243d19fc90cd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-12T21:25:57.756-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cognigy-ops/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/networks/vpc-network-team",
            "priority": 1000,
            "project": "cognigy-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0",
              "117.216.167.245"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "wordpress-firewall"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-team3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network-team3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cognigy-ops/global/networks/vpc-network-team",
            "mtu": 0,
            "name": "vpc-network-team",
            "project": "cognigy-ops",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/networks/vpc-network-team"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-12T21:25:57.814-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cognigy-ops/global/firewalls/load-balancer-hc",
            "log_config": [],
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/networks/vpc-network-team",
            "priority": 1000,
            "project": "cognigy-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-team3"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-12T21:25:57.335-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cognigy-ops/global/firewalls/load-balancer-vm-service",
            "log_config": [],
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/networks/vpc-network-team",
            "priority": 1000,
            "project": "cognigy-ops",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network-team3"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-12-12T21:25:53.653-08:00",
            "id": "projects/cognigy-ops/regions/us-west4/forwardingRules/load-balancer",
            "ip_address": "34.125.74.224",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "cognigy-ops",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/regions/us-west4/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/cognigy-ops/regions/us-west4/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}